--- a/src/Components/Loader/Loader.module.css
+++ b/src/Components/Loader/Loader.module.css
@@ -22,3 +22,10 @@
   padding-top: 17rem;
   min-height: 66.5vh;
 }
+
+@media screen and (max-width: 750px) {
+  .cardWrapper {
+    padding-top: 2rem;
+    min-height: 85vh !important;
+  }
+}
