--- a/src/Styles/Learn.css
+++ b/src/Styles/Learn.css
@@ -1,341 +1,342 @@
 .learn-txt {
-    font-family: Poppins;
-    font-style: normal;
-    font-weight: 600;
-    font-size: 15px;
-    line-height: 30px;
-    display: flex;
-    align-items: center;
-    color: rgba(152, 152, 152, 1);
+  font-family: Poppins;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 15px;
+  line-height: 30px;
+  display: flex;
+  align-items: center;
+  color: rgba(152, 152, 152, 1);
 }
 
 .card-css {
-    left: 456px;
-    top: 274px;
-    background: #F5F5F5;
-    border-radius: 13px;
+  left: 456px;
+  top: 274px;
+  background: #f5f5f5;
+  border-radius: 13px;
 }
 
 .card-heading {
-    font-family: Poppins;
-    font-style: normal;
-    font-weight: 600;
-    font-size: 25px;
-    line-height: 54px;
-    display: flex;
-    align-items: center;
-    color: #586060 !important;
+  font-family: Poppins;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 25px;
+  line-height: 54px;
+  display: flex;
+  align-items: center;
+  color: #586060 !important;
 }
 
 .track {
-    font-family: Poppins;
-    font-style: normal;
-    font-weight: 600;
-    font-size: 14px;
-    line-height: 27px;
-    display: flex;
-    align-items: flex-start !important;
-    text-align: right;
-    color: #42D651;
-    /* margin-top: 15px; */
+  font-family: Poppins;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 27px;
+  display: flex;
+  align-items: flex-start !important;
+  text-align: right;
+  color: #42d651;
+  /* margin-top: 15px; */
 }
 
 .skill {
-    width: 60px;
-    background: #28B5E1;
-    border-radius: 9px;
-    font-family: Poppins;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 9px;
-    display: flex;
-    align-items: center;
-    text-align: center;
-    color: #FFFFFF;
-    margin-top: 10px;
-    padding-left: 8px;
-    padding-right: 10px;
-    padding-top: 1px;
-    padding-bottom: 1px;
+  width: 60px;
+  background: #28b5e1;
+  border-radius: 9px;
+  font-family: Poppins;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 9px;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  color: #ffffff;
+  margin-top: 10px;
+  padding-left: 8px;
+  padding-right: 10px;
+  padding-top: 1px;
+  padding-bottom: 1px;
 }
 
 .content {
-    font-family: Poppins;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 15px;
-    color: #989898;
+  font-family: Poppins;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 15px;
+  color: #989898;
 }
 
 .search-btn {
-    padding-right: 15px
+  padding-right: 15px;
 }
 
 .skillset {
-    font-family: Poppins;
-    font-style: normal;
-    font-weight: 600;
-    font-size: 13px;
-    line-height: 19px;
-    display: flex;
-    align-items: center;
-    text-align: center;
-    color: #989898;
+  font-family: Poppins;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 13px;
+  line-height: 19px;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  color: #989898;
 }
 
 .active {
-    color: #8750A9 !important;
+  color: #8750a9 !important;
 }
 
 .skillRed {
-    width: 60px;
-    background: #D74646;
-    border-radius: 9px;
-    font-family: Poppins;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 9px;
-    display: flex;
-    align-items: center;
-    text-align: center;
-    color: #FFFFFF;
-    margin-top: 10px;
-    padding-left: 8px;
-    padding-right: 10px;
-    padding-top: 1px;
-    padding-bottom: 1px;
+  width: 60px;
+  background: #d74646;
+  border-radius: 9px;
+  font-family: Poppins;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 9px;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  color: #ffffff;
+  margin-top: 10px;
+  padding-left: 8px;
+  padding-right: 10px;
+  padding-top: 1px;
+  padding-bottom: 1px;
 }
 
 .subSkill {
-    font-family: Poppins;
-    font-style: normal;
-    font-weight: 600;
-    font-size: 13px;
-    line-height: 27px;
-    display: flex;
-    align-items: center;
-    color: #586060;
-    text-align: right;
+  font-family: Poppins;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 13px;
+  line-height: 27px;
+  display: flex;
+  align-items: center;
+  color: #586060;
+  text-align: right;
 }
 
 .box-skill-blue {
-    background: #2C91B0;
-    border-radius: 9px;
-    text-align: center;
-    font-family: Poppins;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 12px;
-    /* width: 45px; */
-    color: #FFFFFF;
+  background: #2c91b0;
+  border-radius: 9px;
+  text-align: center;
+  font-family: Poppins;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 12px;
+  /* width: 45px; */
+  color: #ffffff;
 }
 
 .box-skill-red {
-    background: #D74646;
-    border-radius: 9px;
-    text-align: center;
-    font-family: Poppins;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 12px;
-    padding-right: 5px;
-    /* width: 40px; */
-    color: #FFFFFF;
+  background: #d74646;
+  border-radius: 9px;
+  text-align: center;
+  font-family: Poppins;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 12px;
+  padding-right: 5px;
+  /* width: 40px; */
+  color: #ffffff;
 }
 
 .box-skill-blueD {
-    background: #4248D2;
-    border-radius: 9px;
-    text-align: center;
-    font-family: Poppins;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 12px;
-    color: #FFFFFF;
+  background: #4248d2;
+  border-radius: 9px;
+  text-align: center;
+  font-family: Poppins;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 12px;
+  color: #ffffff;
 }
 
 .addition {
-    font-family: Poppins;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 16px;
-    color: #989898;
+  font-family: Poppins;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  color: #989898;
 }
 
 .mobile-card {
-    font-size: 14px !important;
+  font-size: 14px !important;
 }
 
 .icon-time {
-    color: #36CF45;
-    font-size: 20px;
-    padding-top: 10px;
-    padding-right: 25px;
+  color: #36cf45;
+  font-size: 20px;
+  padding-top: 10px;
+  padding-right: 25px;
 }
 
 .trackIcon {
-    display: none;
+  display: none;
 }
 
 @media only screen and (max-width: 768px) {
-    .cardFooter {
-        font-size: 11px !important;
-    }
-    .skillCard {
-        width: 90% !important;
-        padding: 16px !important;
-        /* margin: 1rem 5% !important; */
-    }
-    .cardHeader>h1 {
-        font-family: Poppins;
-        font-style: normal;
-        font-weight: 600;
-        font-size: 25px !important;
-        line-height: normal !important;
-        /* identical to box height */
-        display: flex;
-        align-items: center;
-        color: #586060;
-    }
-    .cardBody {
-        font-size: 14px !important;
-        line-height: normal !important;
-        margin: 8px 0px !important;
-    }
-    .track {
-        display: none;
-    }
-    .trackIcon {
-        display: initial !important;
-    }
+  .cardFooter {
+    font-size: 11px !important;
+  }
+  .skillCard {
+    width: 90% !important;
+    padding: 16px !important;
+    /* margin: 1rem 5% !important; */
+  }
+  .cardHeader > h1 {
+    font-family: Poppins;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 25px !important;
+    line-height: normal !important;
+    /* identical to box height */
+    display: flex;
+    align-items: center;
+    color: #586060;
+  }
+  .cardBody {
+    font-size: 14px !important;
+    line-height: normal !important;
+    margin: 8px 0px !important;
+  }
+  .track {
+    display: none;
+  }
+  .trackIcon {
+    display: initial !important;
+  }
 }
 
 .Spacing {
-    padding-top: 20px !important;
+  padding-top: 20px !important;
 }
 
 .linkTo {
-    color: #586060;
+  color: #586060;
 }
 
 .linkTo:hover {
-    color: #586060;
+  color: #586060;
 }
 
 .linkTo:focus {
-    color: #586060;
+  color: #586060;
 }
 
 .kn-style {
-    color: #999999;
-    font-family: Poppins;
-    font-style: normal;
-    font-weight: 600;
-    font-size: 14px;
+  color: #999999;
+  font-family: Poppins;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 14px;
 }
 
 .sub-txt {
-    color: #586060;
-    font-family: Poppins;
-    font-style: normal;
-    font-weight: 600;
-    font-size: 14px;
+  color: #586060;
+  font-family: Poppins;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 14px;
 }
 
 .req-txt {
-    padding-left: 20px;
+  padding-left: 20px;
 }
 
 .translate-css {
-    transform: translateY(-15px);
+  transform: translateY(-15px);
 }
 
 .style-txt {
-    padding-left: 20px;
-    color: #999999;
+  padding-left: 20px;
+  color: #999999;
 }
 
 .skillCard {
-    background-color: #F5F5F5;
-     width: 60vw;
-    margin: 1rem 0 !important;
-    border-radius: 18px;
-    padding: 3vh 6vh 3vh;
-    
-    display: flex;
-    flex-direction: column;
+  background-color: #f5f5f5;
+  width: 60vw;
+  margin: 1rem 0 !important;
+  border-radius: 18px;
+  padding: 3vh 6vh 3vh;
+
+  display: flex;
+  flex-direction: column;
 }
 
 .cardHeader {
-    display: flex;
-    flex-direction: row;
-    align-items: center !important;
-    justify-content: space-between;
+  display: flex;
+  flex-direction: row;
+  align-items: center !important;
+  justify-content: space-between;
 }
 
-.cardHeader>h1 {
-    text-transform: capitalize;
-    display: flex;
-    align-items: center;
-    font-family: Poppins;
-    font-style: normal;
-    font-weight: 600;
-    font-size: 36px;
-    line-height: 54px;
-    /* identical to box height */
-    display: flex;
-    align-items: flex-start;
-    color: #586060;
+.cardHeader > h1 {
+  text-transform: capitalize;
+  display: flex;
+  align-items: center;
+  font-family: Poppins;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 36px;
+  line-height: 54px;
+  /* identical to box height */
+  display: flex;
+  align-items: flex-start;
+  color: #586060;
 }
 
-h1>span {
-    margin-left: 20px;
-    font-family: Poppins;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 9px;
-    line-height: 13px;
-    display: flex;
-    align-items: center;
-    text-align: center;
-    color: #FFFFFF;
-    border-radius: 9px;
-    padding: 2px 5px;
+h1 > span {
+  margin-left: 20px;
+  font-family: Poppins;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 9px;
+  line-height: 13px;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  color: #ffffff;
+  border-radius: 9px;
+  padding: 2px 5px;
 }
 
 .cardFooter {
-    font-family: Poppins;
-    font-style: normal;
-    font-weight: 600;
-    font-size: 18px;
-    line-height: 27px;
-    /* identical to box height */
-    display: flex;
-    align-items: center;
-    color: #586060;
+  font-family: Poppins;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 27px;
+  /* identical to box height */
+  display: flex;
+  align-items: center;
+  color: #586060;
+  flex-wrap: wrap;
 }
 
-.cardFooter>span {
-    font-family: Poppins;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 12px !important;
-    line-height: 24px;
-    display: flex;
-    border-radius: 9px;
-    padding: 2px 5px;
-    margin-left: 10px;
-    align-items: center;
-    text-align: center;
-    color: #FFFFFF;
+.cardFooter > span {
+  font-family: Poppins;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 12px !important;
+  line-height: 24px;
+  display: flex;
+  border-radius: 9px;
+  padding: 2px 5px;
+  margin: 5px 0 5px 10px;
+  align-items: center;
+  text-align: center;
+  color: #ffffff;
 }
 
 .cardBody {
-    font-family: Poppins;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 17px;
-    line-height: 25px;
-    color: #989898;
-    margin: 15px 30px;
+  font-family: Poppins;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 17px;
+  line-height: 25px;
+  color: #989898;
+  margin: 15px 30px;
 }
